tests/invalid/multiply_star.err_exp
multiply_star.m:022: In clause for predicate `p'/2:
multiply_star.m:022:   error: undefined symbol `*'/2.
